add examples and small fixes
