# internal/handler/grpc.go
@@ -20,14 +20,14 @@ func NewCalculatorServer() *CalculatorServer {
 func (s *CalculatorServer) Calc(_ context.Context, req *calculator.CalcRequest) (*calculator.CalcResponse, error) {
 	start := time.Now()
 
-	service := executor.NewExecutor(req.Instruction, runtime.GOMAXPROCS(0))
+	service := executor.NewExecutor(req.Instructions, runtime.GOMAXPROCS(0))
 	values, err := service.Execute()
 	if err != nil {
 		return nil, err
 	}
 
 	resp := &calculator.CalcResponse{}
-	for _, instr := range req.Instruction {
+	for _, instr := range req.Instructions {
 		if instr.Type == calculator.Type_Print {
 			if v, ok := values[instr.Var]; ok {
 				resp.Item = append(resp.Item, &calculator.CalcResponse_Item{
